--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ SAMed/
 # checkpoints
 checkpoints/
 
+# weights
+weights/
+
+# logs
+wandb/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
