--- a/experiments/SAMed_ABUS/config_file.yaml
+++ b/experiments/SAMed_ABUS/config_file.yaml
@@ -1,6 +1,7 @@
 # settings:
-run_name: multifold_vanilla
+run_name: pretrained_weights
 data_path: data/challange_2023/with_lesion
+pretrained_path: checkpoints/epoch_159.pth
 report_to: wandb
 
 # split
@@ -10,7 +11,7 @@ split_seed: 0
 
 # training
 base_lr: 0.001
-num_classes: 1
+num_classes: 8
 train_batch_size: 16
 max_epoch: 100
 val_batch_size: 32
