--- a/experiments/SAMed_ABUS/config_file.yaml
+++ b/experiments/SAMed_ABUS/config_file.yaml
@@ -1,6 +1,6 @@
 # settings:
 run_name: full-slice-lesion
-
+from_fold: 0
 data_path: data/challange_2023/Train/full-slice_512x512_with-lesion
 pretrained_path: null
 report_to: wandb
