--- a/envs/abus_1.yml
+++ b/envs/abus_1.yml
@@ -164,6 +164,7 @@ dependencies:
       - anyio==3.6.2
       - appdirs==1.4.4
       - attrs==22.2.0
+      - beautifulsoup4==4.12.2
       - bitsandbytes==0.35.0
       - click==7.1.2
       - cmake==3.26.0
@@ -183,6 +184,7 @@ dependencies:
       - fonttools==4.39.2
       - fsspec==2023.3.0
       - ftfy==6.1.1
+      - gdown==4.7.1
       - gitdb==4.0.10
       - gitpython==3.1.31
       - gradio==3.21.0
@@ -246,6 +248,7 @@ dependencies:
       - simpleitk==2.2.1
       - smmap==5.0.0
       - sniffio==1.3.0
+      - soupsieve==2.4.1
       - starlette==0.26.1
       - subprocess32==3.5.4
       - tensorboardx==2.6
