--- a/experiments/SAMed_vith/config_file.yaml
+++ b/experiments/SAMed_vith/config_file.yaml
@@ -1,6 +1,6 @@
 # settings:
-run_name: test
-from_fold: 0
+run_name: vith_bs-8
+from_fold: 1
 data_path: data/challange_2023/Train/full-slice_512x512_with-lesion
 pretrained_path: null
 report_to: wandb
@@ -13,9 +13,9 @@ split_seed: 0
 # training
 base_lr: 0.001
 num_classes: 1
-train_batch_size: 16
+train_batch_size: 8
 max_epoch: 100
-val_batch_size: 16
+val_batch_size: 32
 multimask_output: true
 warmup: false
 warmup_period: 1000
