--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,140 @@
-numpy==1.23.5
-opencv_python==4.7.0.72
-pandas==2.0.2
-SimpleITK==2.2.1
-tqdm==4.65.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+_openmp_mutex=5.1=1_gnu
+absl-py=1.4.0=pypi_0
+accelerate=0.22.0=pypi_0
+appdirs=1.4.4=pypi_0
+asttokens=2.2.1=pyhd8ed1ab_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=pyhd8ed1ab_3
+backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+bzip2=1.0.8=h7b6447c_0
+ca-certificates=2023.7.22=hbcca054_0
+certifi=2023.7.22=pypi_0
+charset-normalizer=3.2.0=pypi_0
+click=8.1.7=pypi_0
+cmake=3.27.2=pypi_0
+colorama=0.4.6=pypi_0
+coloredlogs=15.0.1=pypi_0
+comm=0.1.4=pyhd8ed1ab_0
+contextlib2=21.6.0=pypi_0
+contourpy=1.1.0=pypi_0
+cycler=0.11.0=pypi_0
+debugpy=1.6.7=py310h6a678d5_0
+decorator=5.1.1=pyhd8ed1ab_0
+docker-pycreds=0.4.0=pypi_0
+einops=0.6.1=pypi_0
+entrypoints=0.4=pyhd8ed1ab_0
+executing=1.2.0=pyhd8ed1ab_0
+filelock=3.12.2=pypi_0
+flatbuffers=23.5.26=pypi_0
+fonttools=4.42.1=pypi_0
+gitdb=4.0.10=pypi_0
+gitpython=3.1.32=pypi_0
+h5py=3.8.0=pypi_0
+humanfriendly=10.0=pypi_0
+icecream=2.1.3=pypi_0
+idna=3.4=pypi_0
+imageio=2.28.1=pypi_0
+ipykernel=6.25.1=pyh71e2992_0
+ipython=8.14.0=pyh41d4057_0
+jedi=0.19.0=pyhd8ed1ab_0
+jinja2=3.1.2=pypi_0
+joblib=1.3.2=pypi_0
+jupyter_client=7.3.4=pyhd8ed1ab_0
+jupyter_core=5.3.1=py310hff52083_0
+kiwisolver=1.4.5=pypi_0
+ld_impl_linux-64=2.38=h1181459_1
+libffi=3.4.4=h6a678d5_0
+libgcc-ng=11.2.0=h1234567_1
+libgomp=11.2.0=h1234567_1
+libsodium=1.0.18=h36c2ea0_1
+libstdcxx-ng=11.2.0=h1234567_1
+libuuid=1.41.5=h5eee18b_0
+lit=16.0.6=pypi_0
+markupsafe=2.1.3=pypi_0
+matplotlib=3.7.2=pypi_0
+matplotlib-inline=0.1.6=pyhd8ed1ab_0
+medpy=0.4.0=pypi_0
+ml-collections=0.1.1=pypi_0
+monai=1.2.0rc5=pypi_0
+mpmath=1.3.0=pypi_0
+ncurses=6.4=h6a678d5_0
+nest-asyncio=1.5.6=pyhd8ed1ab_0
+networkx=3.1=pypi_0
+nibabel=5.1.0=pypi_0
+numpy=1.24.3=pypi_0
+nvidia-cublas-cu11=11.10.3.66=pypi_0
+nvidia-cuda-cupti-cu11=11.7.101=pypi_0
+nvidia-cuda-nvrtc-cu11=11.7.99=pypi_0
+nvidia-cuda-runtime-cu11=11.7.99=pypi_0
+nvidia-cudnn-cu11=8.5.0.96=pypi_0
+nvidia-cufft-cu11=10.9.0.58=pypi_0
+nvidia-curand-cu11=10.2.10.91=pypi_0
+nvidia-cusolver-cu11=11.4.0.1=pypi_0
+nvidia-cusparse-cu11=11.7.4.91=pypi_0
+nvidia-nccl-cu11=2.14.3=pypi_0
+nvidia-nvtx-cu11=11.7.91=pypi_0
+onnx=1.14.0=pypi_0
+onnxruntime=1.14.1=pypi_0
+opencv-python=4.7.0.72=pypi_0
+openssl=3.0.10=h7f8727e_2
+packaging=23.1=pyhd8ed1ab_0
+pandas=2.0.3=pypi_0
+parso=0.8.3=pyhd8ed1ab_0
+pathtools=0.1.2=pypi_0
+pexpect=4.8.0=pyh1a96a4e_2
+pickleshare=0.7.5=py_1003
+pillow=10.0.0=pypi_0
+pip=23.2.1=py310h06a4308_0
+platformdirs=3.10.0=pyhd8ed1ab_0
+prompt-toolkit=3.0.39=pyha770c72_0
+prompt_toolkit=3.0.39=hd8ed1ab_0
+protobuf=3.20.3=pypi_0
+psutil=5.9.5=pypi_0
+ptyprocess=0.7.0=pyhd3deb0d_0
+pure_eval=0.2.2=pyhd8ed1ab_0
+pycocotools=2.0.6=pypi_0
+pygments=2.16.1=pyhd8ed1ab_0
+pyparsing=3.0.9=pypi_0
+python=3.10.11=h955ad1f_3
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python_abi=3.10=2_cp310
+pytz=2023.3=pypi_0
+pyyaml=6.0.1=pypi_0
+pyzmq=25.1.0=py310h6a678d5_0
+readline=8.2=h5eee18b_0
+requests=2.31.0=pypi_0
+safetensors=0.3.1=pypi_0
+scikit-learn=1.3.0=pypi_0
+scipy=1.10.1=pypi_0
+sentry-sdk=1.29.2=pypi_0
+setproctitle=1.3.2=pypi_0
+setuptools=68.0.0=py310h06a4308_0
+simpleitk=2.2.1=pypi_0
+six=1.16.0=pyh6c4a22f_0
+smmap=5.0.0=pypi_0
+sqlite=3.41.2=h5eee18b_0
+stack_data=0.6.2=pyhd8ed1ab_0
+sympy=1.12=pypi_0
+tensorboardx=2.6=pypi_0
+threadpoolctl=3.2.0=pypi_0
+tk=8.6.12=h1ccaba5_0
+torch=2.0.0=pypi_0
+torchvision=0.15.1=pypi_0
+tornado=6.1=py310h5764c6d_3
+tqdm=4.65.0=pypi_0
+traitlets=5.9.0=pyhd8ed1ab_0
+triton=2.0.0=pypi_0
+typing-extensions=4.7.1=hd8ed1ab_0
+typing_extensions=4.7.1=pyha770c72_0
+tzdata=2023.3=pypi_0
+urllib3=2.0.4=pypi_0
+wandb=0.15.8=pypi_0
+wcwidth=0.2.6=pyhd8ed1ab_0
+wheel=0.38.4=py310h06a4308_0
+xz=5.4.2=h5eee18b_0
+zeromq=4.3.4=h9c3ff4c_1
+zlib=1.2.13=h5eee18b_0
