--- a/Dockerfile.iyi
+++ b/Dockerfile.iyi
@@ -1,5 +1,6 @@
 # base image
-FROM pytorch/pytorch:2.0.0-cuda11.7-cudnn8-runtime
+FROM pytorch/pytorch:2.0.0-cuda11.7-cudnn8-devel
+# FROM pytorch/pytorch:1.9.1-cuda11.1-cudnn8-devel
 
 # create user and set bash as default shell, give permissions
 RUN useradd -ms /bin/bash usuari
