--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@ data/
 results/
 results_load_more/
 model_weights/
+model_weights_h/
 
 # docker related
 input/
 predict/
+predict_h/
 cached_data/
 exit/
 dockerimages/
